# anekbot

./: .gitignore  Dockerfile  README.md  docker-compose-full.yml  docker-compose.yaml  docker-compose.yml  main.py  migrate.py  pyproject.toml
.github/workflows/: python-app.yml
app/: ai.py  bot_state.py  chat_settings.py  config.py  database.py  jokes.py  main.py  models.py  routes.py  utils.py
data/: example_jokes.csv
migrations/: env.py
migrations/versions/: 4522c1f582c0_add_ivfflat_index.py  7ab3ab2be819_create_jokes_table.py  ad12450c8523_initial_migration.py  baad796c3c2b_added_chat_settings.py
scripts/: deploy.sh  entrypoint.sh  load_jokes.py  up.sh
tests/: conftest.py  env-test  test_chat_settings.py  test_jokes.py  utils.py
tests/test_data/: generate_test_data.py  precomputed_embeddings.pkl
