[tool.poetry]
name = "anekbot"
version = "0.1.0"
description = ""
authors = ["restaart"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.60.2"
aiogram = "^3.17.0"
pydantic-settings = "^2.7.1"
alembic = "^1.14.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.37"}
asyncpg = "^0.30.0"
pgvector = "^0.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
